--- a/force-app/main/default/classes/Ocupeclass.cls
+++ b/force-app/main/default/classes/Ocupeclass.cls
@@ -1,5 +1,5 @@
 public with sharing class Ocupeclass {
     public ocupeclass() {
-        System.assert(expected, message);
+        return [SELECT Id, Name, Active__c FROM Account WHERE Active__c = 'Yes' WITH SECURITY_ENFORCED];
     }
 }
