--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -1,7 +1,7 @@
 public class AccountHandler {
 
     public static Account insertNewAccount(String name) {
-
+        //this is the test comment for the new account
         Account account = new Account(Name = name);
 
         try {
