this commit to testy the debug test in code scanners

--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -5,7 +5,7 @@ public class AccountHandler {
         Account account = new Account(Name = name);
 
         try {
-            System.debug('this test working fine');
+            System.debug('this test working fine another one');
             insert account;
 
         } catch (System.DmlException e) {
