yaml error salesforce after deletin yml after merge

--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -3,7 +3,7 @@ public class AccountHandler {
     public static Account insertNewAccount(String name) {
         //this is the test comment for the new account
         Account account = new Account(Name = name);
-        // this comment is for AccountHandler after deleting yaml 
+        // this comment is for AccountHandler after deleting yaml after merge 
         try {
             System.debug('this test');
             insert account;
