--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -6,6 +6,7 @@ public class AccountHandler {
         // this comment is for AccountHandler after deleting yaml after merge 
         try {
             System.debug('this test is after deploy success today');
+            System.debug('this test is after deploy success today');
             insert account;
 
         } catch (System.DmlException e) {
